Turning in my reading journal for day 2

--- a/day2_reading_journal.ipynb
+++ b/day2_reading_journal.ipynb
@@ -33,9 +33,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    " "
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -52,7 +50,15 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def xy(x,y):\n",
+    "...     if x>y:\n",
+    "...             return 1\n",
+    "...     if x==y:\n",
+    "...             return 0\n",
+    "...     if x<y:\n",
+    "...             return -1\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,6 +79,8 @@
     "    if x < 0:\n",
     "        return -x\n",
     "    if x > 0:\n",
+    "        return x\n",
+    "    if x==0:\n",
     "        return x"
    ]
   },
@@ -91,7 +99,35 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ">>> def hypo(a,b):\n",
+    "...     return 0\n",
+    "... \n",
+    ">>> hypo(3,4)\n",
+    "0\n",
+    ">>> def hypo(a,b):\n",
+    "...     squared=a**2+b**2\n",
+    "...     return squared\n",
+    "... \n",
+    ">>> hypo(3,4)\n",
+    "25\n",
+    ">>> def hypo(a,b):\n",
+    "...     squared=a**2+b**2\n",
+    "...     c=math.sqrt(squared)\n",
+    "...     return c\n",
+    "... \n",
+    ">>> hypo(3,4)\n",
+    "Traceback (most recent call last):\n",
+    "  File \"<stdin>\", line 1, in <module>\n",
+    "  File \"<stdin>\", line 3, in hypo\n",
+    "NameError: name 'math' is not defined\n",
+    ">>> import math\n",
+    ">>> \n",
+    ">>> math\n",
+    "<module 'math' (built-in)>\n",
+    ">>> hypo(3,4)\n",
+    "5.0\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -108,7 +144,13 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ">>> def is_between(x,y,z):\n",
+    "...     if x<=y<=z:\n",
+    "...             return True\n",
+    "...     else:\n",
+    "...             return False\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,7 +184,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "haha very funny"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -159,7 +203,16 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ">>> def square_root(a):\n",
+    "...     x=input('Insert an approximation for x\\n')\n",
+    "...     while x!=2.0:\n",
+    "...             print(x)\n",
+    "...             y=(x+a/x)/2\n",
+    "...             if y==x:\n",
+    "...                     break\n",
+    "...             x=y\n"
+   ]
   },
   {
    "cell_type": "markdown",
